# gif-viewer

./: CMakeLists.txt  README.md  main.cpp  window.cpp  window.hpp
